# modules

./: .gitignore  .gitmodules  .nf-core.yml  .prettierignore  Makefile  README (1).md  README.md  SUMMARY.md  conftest.py  contributing.md  hpc_test.config  nextflow_env.yml  nf-test.config  pipeline-development.md  pyproject.toml  requirements.txt  temp.yml  test.tap  yaml_to_md.py
.github/: CODEOWNERS  CODEOWNERS-tmp  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  conda_skip.yml  generate_codeowners.sh  manual_CODEOWNERS.txt  skip_nf_test.json
backup-docs/: comparison-of-ways-to-manage-modules.md  how-to-start-a-new-module-on-our-own.md  how-to-start-a-new-module-via-nf-core-commands.md
current-docs/: full-cmds-for-clinbx.md  update-nf-core-tools-to-v2.6.md
image-management/: README.md  connection-to-github-actions.md  rules.md
modules/: .gitbook.yaml  .md  README.md  SUMMARY.md  custom_splitfastqbylane.md  environment-schema.json  example.md  example_2  facets.md  gbcms.md  genome_nexus.md  genomenexus_annotationpipeline.md  genomenexus_vcf2maf.md  genotypevariants_all.md  meta-schema.json  mutect1.md  neoantigenutils_convertannotjson.md  neoantigenutils_formatnetmhcpan.md  neoantigenutils_generatehlastring.md  neoantigenutils_generatemutfasta.md  neoantigenutils_neoantigeninput.md  netmhc3.md  netmhcpan.md  netmhcpan4.md  netmhcstabandpan.md  netmhcstabpan.md  phylowgs.md  phylowgs_createinput.md  phylowgs_writeresults.md  polysolver.md  pvmaf_tagtraceback.md  rediscoverte.md  salmon_quant.md  snppileup.md  yaml-schema.json
subworkflows/: bwa_markdup_bqsr.md  (+4 more)
(+564 files in other folders)
