[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Yu Hu <huy1@mskcc.org>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"
nf-core = {git = "https://github.com/mskcc-omics-workflows/nfcore-cmd.git", rev = "mskcc/nf-core"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
