[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Yu Hu <huy1@mskcc.org>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"
nf-core = {path = "../nfcore-tools/dist/nf-core-2.6.0.1.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
